# Raspberry-pi-pico-thermomentr

./: CMakeLists.txt  README.md  diode.cpp  diode.h  lm35.cpp  lm35.h  main.cpp
